Fixed active link press ; Added a min-height to the hero section to make it appear right on mobiles ; hashed the filename for CSS

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,13 +3,6 @@
 $fa-font-path: "~font-awesome/fonts";
 @import "~font-awesome/scss/font-awesome";
 
-.image-bg-wrapper {
-  position: relative;
-  //top: -54px;
-  width: 100%;
-  height: 100vh;
-}
-
 header {
   position: absolute;
   top: 0;
@@ -18,14 +11,25 @@ header {
   z-index: 500;
 }
 
-.image-bg {
+.image-bg-wrapper {
+  position: relative;
+  //top: -54px;
+  width: 100%;
+  height: 100vh;
+  min-height: 530px;
+}
+
+.image-bg, .image-bg-overlay, .hero-front {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
-  background-image: url('../../static/ouverture_original.jpg');
-  /* Using vh sets this independently to the container */
   height: 100vh;
+  min-height: 530px;
+}
+
+.image-bg {
+  background-image: url('../../static/ouverture_original.jpg');
   /* This is how you make it fit the screen */
   background-size: cover;
   background-position: center;
@@ -33,22 +37,12 @@ header {
 }
 
 .image-bg-overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
   background-color: $dark-bg;
   opacity: 0.85;
   z-index: -990;
-  height: 100vh;
 }
 
 .hero-front {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100vh;
   /* Flex stuff */
   display: flex;
   flex-direction: column;
